# bio-quantum

./: .gitignore  Falcon_Quantum_Algorithm_TSP_ Grupo 13 - Quantum Tech.ipynb  pyproject.toml
notebooks/: TSP_QAOA_Grupo13_Bio_Quantum_5cidades.ipynb  hybrid_qnn_ovarian_histopathology.ipynb  vqe.ipynb  vqe_tsp_analise_parametros.ipynb
